--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=tiger
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+#### mybatis
+mybatis.mapper-locations=mappers/**/*.xml
+mybatis.type-aliases-package=edu.ict.ex
